Add filtering by active state. Add tests and update test helpers. Update swagger.yaml.
